# Metody-numeryczne

./: .gitignore  CMakeLists.txt
Zadanie_1/: CMakeLists.txt  Zadanie 1.ipynb  main.c
Zadanie_10/: CMakeLists.txt  main.c
Zadanie_11/: CMakeLists.txt  main.c
Zadanie_12/: fourier.py  function.py  haar.py  zadanie12.py  zadanie12_kompresja.py  zadanie_13.py
Zadanie_2/: CMakeLists.txt  Zadanie 2.ipynb  main.c
Zadanie_3/: CMakeLists.txt  main.c
Zadanie_4/: CMakeLists.txt  main.c
Zadanie_5/: CMakeLists.txt  main.c
Zadanie_6/: CMakeLists.txt  main.c
Zadanie_7/: CMakeLists.txt  DataGenerator.ipynb  main.c
Zadanie_8/: CMakeLists.txt  main.c
Zadanie_9/: CMakeLists.txt  main.c
lib/: array.c  array.h  array_d.c  array_d.h  interop.c  interop.h  interop_d.c  interop_d.h  matrix.c  matrix.h  matrix_d.c  matrix_d.h  svd.h  test.h
