cmake_minimum_required(VERSION 3.16)
project(numeryczne)
set(CMAKE_C_STANDARD 99)
# set(CMAKE_CXX_STANDARD 17)

add_library(matrix STATIC lib/matrix.h lib/matrix.c)
add_library(array STATIC lib/array.h lib/array.c)
add_library(interop STATIC lib/interop.h lib/interop.c)
add_library(array_d STATIC lib/array_d.h lib/array_d.c)
add_library(matrix_d STATIC lib/matrix_d.h lib/matrix_d.c)
add_library(interop_d STATIC lib/interop_d.h lib/interop_d.c)
add_subdirectory(Zadanie_1)
add_subdirectory(Zadanie_2)
add_subdirectory(Zadanie_3)
add_subdirectory(Zadanie_4)
add_subdirectory(Zadanie_5)
add_subdirectory(Zadanie_6)
add_subdirectory(Zadanie_7)
add_subdirectory(Zadanie_8)
add_subdirectory(Zadanie_9)
add_subdirectory(Zadanie_10)
add_subdirectory(Zadanie_11)